committed on 6-3-2026